Fix alert modal close button alignment

--- a/assets/sass/components/_base.scss
+++ b/assets/sass/components/_base.scss
@@ -51,6 +51,12 @@ a {
   }
 }
 
+.alert-modal {
+  .close-btn {
+    top: 9px;
+  }
+}
+
 select, .select {
   max-width: 200px;
 }
